# ECS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  component.hpp  components_manger.cpp  components_manger.hpp  format_code_style.sh  i_component.cpp  i_component.hpp  i_component_container.hpp
.github/workflows/: cmake.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake
ecs/: CMakeLists.txt  engine.cpp  engine.hpp
ecs/component/: component.cpp  component.hpp  component_type.hpp  component_type_container.hpp  components_container.cpp  components_container.hpp  components_look_up_table.hpp
ecs/entity/: entities_id_container.hpp
ecs/iterator/: component_type_iterator.hpp  components_iterator.hpp
ecs/manager/: components_manager.cpp  components_manager.hpp  entities_manager.cpp  entities_manager.hpp  systems_manager.cpp  systems_manager.hpp
ecs/system/: system.cpp  system.hpp  system_type.hpp
ecs/utility/: map_components_iterator.cpp  map_components_iterator.hpp  map_look_up_table.cpp  map_look_up_table.hpp  set_entities_id_container.cpp  set_entities_id_container.hpp
include/: component.hpp  component_iterator.hpp  component_type.hpp  component_type_container.hpp  component_type_iterator.hpp  components_container.hpp  components_iterator.hpp  components_look_up_table.hpp  components_manager.hpp  engine.hpp  entities_id_container.hpp  entities_manager.hpp  entity_manager.hpp  entitys_id_container.hpp  system.hpp  system_manager.hpp  system_type.hpp  systems_manager.hpp  types.hpp
include/utility/: map_components_iterator.hpp  map_look_up_table.hpp  set_entities_id_container.hpp
libs/: CMakeLists.txt
src/: component.cpp  components_container.cpp  components_manager.cpp  engine.cpp  entities_manager.cpp  entity_manager.cpp  system.cpp  system_manager.cpp  systems_manager.cpp
src/utility/: map_components_iterator.cpp  map_look_up_table.cpp  set_entities_id_container.cpp
tests/: CMakeLists.txt  component_tests.cpp  components_container_test.cpp  components_iterator_test.cpp  components_manager_test.cpp  engine_test.cpp  entities_manager_test.cpp  system_tests.cpp  systems_manager_test.cpp
tests/component/: component_test.cpp  components_container_test.cpp
tests/engine/: engine_test.cpp
tests/iterator/: components_iterator_test.cpp
tests/manager/: components_manager_test.cpp  entities_manager_test.cpp  systems_manager_test.cpp
tests/system/: system_test.cpp
tests/test_utility/: CMakeLists.txt  test_component_type_1.hpp  test_component_type_2.hpp
